lazygit shortcuts for hx / nvim

--- a/lazygit/config.yaml
+++ b/lazygit/config.yaml
@@ -11,15 +11,15 @@ customCommands:
     context: "global"
     description: "Yazi"
   - key: "J"
-    command: "fish -c \"launch_new_tab 'cd {{ .SelectedWorktree.Path }}; {{ if .SelectedFile }}nvim {{ .SelectedFile.Name }}{{ else }}nvim_find_files $p{{ end }}'\""
+    command: "fish -c \"launch_new_tab 'cd {{ .SelectedWorktree.Path }}; nvim_find_files'\""
     context: "global"
     description: "Yazi"
   - key: "<c-j>"
-    command: "fish -c \"launch_new_tab 'cd {{ .SelectedWorktree.Path }}; {{ if .SelectedFile }}nvim {{ .SelectedFile.Name }}{{ else }}nvim_find_files $p{{ end }}'\""
+    command: "fish -c \"launch_new_tab 'cd {{ .SelectedWorktree.Path }}; {{ if .SelectedFile }}nvim {{ .SelectedFile.Name }}{{ else }}nvim_find_files{{ end }}'\""
     context: "global"
     description: "Yazi"
   - key: "K"
-    command: "p={{ .SelectedWorktree.Path }}/{{ if .SelectedFile }}{{ .SelectedFile.Name }}{{ end }} && fish -C \"set p $p\" -c \"hx_new_tab '$p'\""
+    command: "fish -c \"hx_new_tab '{{ .SelectedWorktree.Path }}'\""
     context: "global"
     description: "Yazi"
   - key: "<c-k>"
