yazi keybindings adjust

--- a/yazi/keymap.toml
+++ b/yazi/keymap.toml
@@ -159,7 +159,12 @@ desc = "Open with nvim"
 [[manager.prepend_keymap]]
 on   = "<A-j>"
 run  = "shell 'fish -c \"cd (git_repo_dir $1); nvim_find_files\"' --block --confirm"
-desc = "Open with nvim"
+desc = "Open project with nvim"
+
+[[manager.prepend_keymap]]
+on   = "<A-h>"
+run  = "shell 'fish -c \"cd (git_repo_dir $1); hx .\"' --block --confirm"
+desc = "Open project with helix"
 
 [[manager.prepend_keymap]]
 on   = "<C-e>"
