cd before opening nvim from helx

--- a/helix/config.toml
+++ b/helix/config.toml
@@ -89,7 +89,7 @@ Q = ":q!"
 "ret" = "last_picker"
 " " = "global_search"
 "Y" = "yank_abs_filename_to_clipboard"
-N = ["yank_abs_filename_to_clipboard", ":sh fish -c 'launch_new_tab \"nvim (pbpaste)\"'"]
+N = ["yank_abs_filename_to_clipboard", ":sh fish -c 'launch_new_tab \"nvim (pbpaste) -c \":CD\"\"'"]
 I = ["yank_abs_filename_to_clipboard", ":sh fish -c 'yazi_new_tab (pbpaste)'"]
 "\\" = "hsplit"
 "|" = "vsplit"
