c-a and c-e in helix insert mode don't highlight

--- a/helix/config.toml
+++ b/helix/config.toml
@@ -113,8 +113,8 @@ j = { k = "normal_mode", i = "normal_mode"}
 "C-right" = "move_next_word_start"
 "A-<" = "goto_file_start"
 "A->" = "goto_file_end"
-"C-a" = "extend_to_line_start"
-"C-e" = "extend_to_line_end_newline"
+"C-a" = "goto_line_start"
+"C-e" = "goto_line_end_newline"
 "A-left" = "goto_line_start"
 "C-v" = "page_down"
 "A-v" = "page_up"
