c-k to do shell on yazi now

--- a/yazi/keymap.toml
+++ b/yazi/keymap.toml
@@ -183,8 +183,8 @@ desc = "zoxide"
 
 [[manager.prepend_keymap]]
 on   = "<C-k>"
-run  = "plugin zoxide"
-desc = "Zoxide"
+run  = "shell 'fish' --block --confirm"
+desc = "Fish Shell"
 
 [[manager.prepend_keymap]]
 on   = "<A-k>"
