--- a/yazi/yazi.toml
+++ b/yazi/yazi.toml
@@ -7,6 +7,7 @@ edit = [
 	{ run = 'hx "$@"', block = true, for = "unix" },
 	{ run = 'nvim "$@"', block = true, for = "unix" },
 	{ run = 'emacsclient -c -a "emacs -nw" "$@"', block = true, for = "unix" },
+	{ run = 'open -a neovide "$@"', block = false, for = "unix", desc = "neovide" },
 ]
 
 [open]
