Kitty appearance adjustments

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,12 +1,12 @@
 macos_option_as_alt yes
 confirm_os_window_close 0
 shell /opt/homebrew/bin/fish
-# cursor_trail 3
-# cursor_trail_decay 0.01 0.1
+cursor_trail 10
+cursor_trail_decay 0.005 0.05
 
 # Font
-font_family Fira Code Medium
-font_size 18
+font_family Fira Code
+font_size 17
 
 window_resize_step_cells 10
 window_resize_step_lines 10
