--- a/yazi/keymap.toml
+++ b/yazi/keymap.toml
@@ -19,6 +19,11 @@ run  = "shell 'fish -c \"yazi_new_tab $1\"' --confirm"
 desc = "New Tab"
 
 [[manager.prepend_keymap]]
+on   = "<a-p>"
+run  = "shell 'fish -c \"echo && echo -n (realpath $1) && sleep 10\"' --block --confirm"
+desc = "Print path"
+
+[[manager.prepend_keymap]]
 on   = ["g", "g"]
 run  = "shell 'fish -c \"lazygit_new_tab $1\"' --block --confirm"
 desc = "Lazygit in New Tab"
