ghostty send repeat to other pane

--- a/.skhdrc
+++ b/.skhdrc
@@ -149,6 +149,9 @@
 # xx which is helix to last line
 # then ghostty keymaps to get scrollback buffer
 # quick hacks until better support is added
+cmd - j [
+	"ghostty" : fish -c "sendRepeatToOtherPane"
+]
 cmd - g [
 	"ghostty" : skhd -k "alt - q" && skhd -t "xx " && skhd -k "cmd + shift - j" && skhd -k return
 ]
