--- a/yazi/keymap.toml
+++ b/yazi/keymap.toml
@@ -30,7 +30,7 @@ desc = "Lazygit in New Tab"
 
 [[manager.prepend_keymap]]
 on   = ["<c-g>"]
-run  = "shell 'fish -c \"lazygit_new_tab $1\"' --block --confirm"
+run  = "shell 'fish -c \"lazygit_new_tab $1\"' --confirm"
 desc = "Lazygit in New Tab"
 
 # Since i don't have much use for running non blocking shell from yazi
