split shortcuts in yazi

--- a/yazi/keymap.toml
+++ b/yazi/keymap.toml
@@ -4,7 +4,17 @@ run  = "shell 'fish -c \"yazi_vsplit $1\"' --confirm"
 desc = "Vertical Split"
 
 [[manager.prepend_keymap]]
+on   = "<S-k>"
+run  = "shell 'fish -c \"yazi_vsplit $1\"' --confirm"
+desc = "Vertical Split"
+
+[[manager.prepend_keymap]]
 on   = "\\"
+run  = "shell 'fish -c \"yazi_hsplit $1\"' --confirm"
+desc = "Horizontal Split"
+
+[[manager.prepend_keymap]]
+on   = "<S-j>"
 run  = "shell 'fish -c \"yazi_hsplit $1\"' --confirm"
 desc = "Horizontal Split"
 
