--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -4,6 +4,8 @@ shell /opt/homebrew/bin/fish
 cursor_trail 10
 cursor_trail_decay 0.005 0.05
 
+# icon: https://www.reddit.com/r/KittyTerminal/comments/1kyookl/made_more_icons_for_kitty/
+
 # Font
 font_family Fira Code
 font_size 17
