--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -98,7 +98,7 @@ tab_fade 0.01 0.2 0.95 1
 
 # https://github.com/catppuccin/kitty/blob/main/themes/mocha.conf
 # The basic colors
-foreground              #CDD6F4
+foreground              #FFFFFF
 # background              #1A1A2A
 selection_foreground    #1E1E2E
 selection_background    #F5E0DC
