ghostty custom shader

--- a/ghostty/config
+++ b/ghostty/config
@@ -45,3 +45,6 @@ keybind = super+alt+shift+j=write_screen_file:open
 # custom-shader = ~/proj/ghostty-shaders/tft.glsl
 # custom-shader = ~/proj/ghostty-shaders/gears-and-belts.glsl
 # custom-shader = ~/proj/ghostty-shaders/underwater.glsl
+# custom-shader = ~/proj/ghostty-shader-playground/shaders/cursor_frozen.glsl
+custom-shader = ~/proj/ghostty-shader-playground/shaders/cursor_blaze.glsl
+# custom-shader = ~/proj/ghostty-shader-playground/shaders/cursor_blaze_tapered.glsl
