turn off kitty animations

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,8 +1,8 @@
 macos_option_as_alt yes
 confirm_os_window_close 0
 shell /opt/homebrew/bin/fish
-cursor_trail 10
-cursor_trail_decay 0.005 0.05
+# cursor_trail 10
+# cursor_trail_decay 0.005 0.05
 
 # icon: https://www.reddit.com/r/KittyTerminal/comments/1kyookl/made_more_icons_for_kitty/
 
