--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -16,10 +16,10 @@ window_resize_step_lines 10
 kitty_mod command
 
 # https://github.com/mrjones2014/smart-splits.nvim?tab=readme-ov-file#kitty
-map super+alt+j kitten pass_keys.py relative_resize down  10 alt+j
-map super+alt+k kitten pass_keys.py relative_resize up    10 alt+k
-map super+alt+h kitten pass_keys.py relative_resize left  10 alt+h
-map super+alt+l kitten pass_keys.py relative_resize right 10 alt+l
+map super+ctrl+j kitten pass_keys.py relative_resize down  10 alt+j
+map super+ctrl+k kitten pass_keys.py relative_resize up    10 alt+k
+map super+ctrl+h kitten pass_keys.py relative_resize left  10 alt+h
+map super+ctrl+l kitten pass_keys.py relative_resize right 10 alt+l
 
 # https://github.com/mikesmithgh/kitty-scrollback.nvim?tab=readme-ov-file
 allow_remote_control socket-only
