more new keybindings for kitty and ghostty

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -65,8 +65,13 @@ map super+shift+w close_tab
 
 map super+u scroll_page_up
 map super+d scroll_page_down
-# map super+f send_text --match fish foo
-# https://github.com/kovidgoyal/kitty/issues/3147
+
+map super+f next_window
+map super+b previous_window
+map super+alt+f move_window_forward
+map super+alt+b move_window_backward
+map super+l launch --location=vsplit
+map super+; launch --location=vsplit
 
 map super+ctrl+n combine : nth_window -1 : send_text all r\x0d : nth_window -1
 map super+j combine : nth_window -1 : send_text all r\x0d : nth_window -1
