--- a/ghostty/config
+++ b/ghostty/config
@@ -36,6 +36,11 @@ keybind = super+ctrl+k=resize_split:up,60
 keybind = super+ctrl+l=resize_split:right,60
 keybind = super+ctrl+enter=toggle_split_zoom
 
+keybind = super+f=goto_split:next
+keybind = super+b=goto_split:previous
+keybind = super+l=new_split:right
+keybind = super+;=new_split:right
+
 # nvm this
 keybind = super+shift+h=text:nvim +9999 /
 keybind = super+shift+j=write_screen_file:paste
