close other tabs keybind

--- a/ghostty/config
+++ b/ghostty/config
@@ -54,3 +54,5 @@ keybind = super+alt+shift+j=write_screen_file:open
 custom-shader = ~/proj/ghostty-shader-playground/shaders/cursor_frozen.glsl
 # custom-shader = ~/proj/ghostty-shader-playground/shaders/cursor_blaze.glsl
 # custom-shader = ~/proj/ghostty-shader-playground/shaders/cursor_blaze_tapered.glsl
+
+keybind = super+o=close_other_tabs
