--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -7,8 +7,8 @@ shell /opt/homebrew/bin/fish
 # icon: https://www.reddit.com/r/KittyTerminal/comments/1kyookl/made_more_icons_for_kitty/
 
 # Font
-font_family Fira Code
-font_size 17
+font_family Fira Code Medium
+font_size 18
 
 window_resize_step_cells 10
 window_resize_step_lines 10
@@ -90,8 +90,8 @@ map super+shift+a detach_window tab-left
 map super+shift+d detach_window tab-right
 map super+shift+s detach_window ask
 
-background_opacity 0.6
-background_blur 40
+background_opacity 0.25
+background_blur 64
 
 # Tab style
 # tab_bar_style separator
