tmux small note

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -82,6 +82,9 @@ set -g @dracula-plugins "battery cpu-usage ram-usage git"
 set -g @dracula-show-left-icon session
 # set -g status-position top
 
+# passthrough if needed
+# https://yazi-rs.github.io/docs/image-preview/#tmux
+
 # initialize tmux plugin manager
 # (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
