--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -70,8 +70,8 @@ map super+f next_window
 map super+b previous_window
 map super+alt+f move_window_forward
 map super+alt+b move_window_backward
-map super+l launch --location=vsplit
-map super+; launch --location=vsplit
+map super+l launch --location=vsplit --cwd=current
+map super+; launch --location=vsplit --cwd=current
 
 map super+ctrl+n combine : nth_window -1 : send_text all r\x0d : nth_window -1
 map super+j combine : nth_window -1 : send_text all r\x0d : nth_window -1
