alt-j skhd adjustments

--- a/.skhdrc
+++ b/.skhdrc
@@ -193,7 +193,9 @@ ctrl - p [
 alt - j [
 	"finder" : ~/.config/dotfiles/scripts/runghostty.sh
 	"google chrome" : ~/.config/dotfiles/scripts/runghostty.sh
-	"brave browser" : ~/.config/dotfiles/scripts/runghostty.sh
+    "brave browser" : skhd -k "cmd + shift + ctrl - 4"
+    "Notes" : skhd -k "cmd + shift + ctrl - 4"
+    "Σημειώσεις" : skhd -k "cmd + shift + ctrl - 4"
 ]
 # ctrl - /
 ctrl - 0x2C [
