--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -101,41 +101,7 @@ background_blur 64
 # tab_bar_background #eee
 tab_fade 0.01 0.2 0.95 1
 
-# https://github.com/catppuccin/kitty/blob/main/themes/mocha.conf
-# The basic colors
-foreground              #FFFFFF
-# background              #1A1A2A
-selection_foreground    #1E1E2E
-selection_background    #F5E0DC
-
-# Cursor colors
-cursor                  #FFFF00
-cursor_text_color       #1E1E2E
-
-# URL underline color when hovering with mouse
-url_color               #F5E0DC
-
-# Kitty window border colors
-active_border_color     #B4BEFE
-inactive_border_color   #6C7086
-bell_border_color       #F9E2AF
-
-# OS Window titlebar colors
-wayland_titlebar_color  #1E1E2E
-macos_titlebar_color    #1E1E2E
-
-# Tab bar colors
-active_tab_foreground   #11111B
-active_tab_background   #ff00cc
-# active_tab_background   #ff0000
-inactive_tab_foreground #CDD6F4
-inactive_tab_background #181825
-tab_bar_background      #11111B
-
-# Colors for marks (marked text in the terminal)
-mark1_foreground #1E1E2E
-mark1_background #B4BEFE
-mark2_foreground #1E1E2E
-mark2_background #CBA6F7
-mark3_foreground #1E1E2E
-mark3_background #74C7EC
+# BEGIN_KITTY_THEME
+# Tomorrow Night Blue
+include current-theme.conf
+# END_KITTY_THEME
