--- a/ghostty/config
+++ b/ghostty/config
@@ -1,5 +1,5 @@
 command = /opt/homebrew/bin/fish
-theme = Cobalt2
+theme = 0x96f
 confirm-close-surface = false
 macos-option-as-alt = true
 font-family = Fira Code Medium
@@ -12,7 +12,7 @@ font-size = 18
 macos-icon = blueprint
 
 background = #000000
-background-opacity = 0.20
+background-opacity = 0.0
 background-blur-radius = 65
 # shell-integration-features = no-cursor
 macos-non-native-fullscreen = true
