--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -7,8 +7,8 @@ shell /opt/homebrew/bin/fish
 # icon: https://www.reddit.com/r/KittyTerminal/comments/1kyookl/made_more_icons_for_kitty/
 
 # Font
-font_family Fira Code Medium
-font_size 18.70
+font_family Fira Code
+font_size 18
 
 window_resize_step_cells 10
 window_resize_step_lines 10
@@ -90,7 +90,7 @@ map super+shift+a detach_window tab-left
 map super+shift+d detach_window tab-right
 map super+shift+s detach_window ask
 
-background_opacity 0.25
+background_opacity 0.3
 background_blur 64
 
 # Tab style
