--- a/ghostty/config
+++ b/ghostty/config
@@ -16,9 +16,9 @@ font-size = 18
 # macos-icon = xray
 macos-icon = blueprint
 
-background = #002450
-background-opacity = 0.3
-background-blur-radius = 65
+background = #000000
+background-opacity = 0.85
+# background-blur-radius = 65
 # shell-integration-features = no-cursor
 macos-non-native-fullscreen = true
 
