--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -90,8 +90,8 @@ map super+shift+a detach_window tab-left
 map super+shift+d detach_window tab-right
 map super+shift+s detach_window ask
 
-background_opacity 0.3
-background_blur 64
+# background_opacity 0.3
+# background_blur 64
 
 # Tab style
 # tab_bar_style separator
