--- a/yazi/keymap.toml
+++ b/yazi/keymap.toml
@@ -34,6 +34,16 @@ run  = "plugin fzf_proj"
 desc = "fzf projects"
 
 [[mgr.prepend_keymap]]
+on   = "<c-enter>"
+run  = "plugin fzf_proj"
+desc = "fzf projects"
+
+[[mgr.prepend_keymap]]
+on   = "<a-enter>"
+run  = "plugin fzf_proj"
+desc = "fzf projects"
+
+[[mgr.prepend_keymap]]
 on   = "T"
 run  = "shell 'fish -c \"yazi_new_tab $1\"' --confirm"
 desc = "New Tab"
