--- a/ghostty/config
+++ b/ghostty/config
@@ -46,8 +46,9 @@ keybind = super+b=goto_split:previous
 keybind = super+l=new_split:right
 keybind = super+;=new_split:right
 
-keybind = super+h=write_screen_file:copy
-keybind = super+g=write_screen_file:paste
+keybind = super+g=write_screen_file:copy
+keybind = super+r=toggle_command_palette
+keybind = super+k=toggle_command_palette
 
 # nvm this
 keybind = super+shift+h=text:nvim +9999 /
@@ -64,3 +65,6 @@ custom-shader = ~/proj/ghostty-shader-playground/shaders/cursor_frozen.glsl
 # custom-shader = ~/proj/ghostty-shader-playground/shaders/cursor_blaze_tapered.glsl
 
 keybind = super+o=close_tab:other
+
+keybind = super+h=write_screen_file:copy
+keybind = chain=text:nvim +9999 \x19\r
