--- a/.yabairc
+++ b/.yabairc
@@ -12,8 +12,18 @@ sudo yabai --load-sa
 
 # global settings
 yabai -m config                                 \
-    window_animation_duration    0.0            \
-    display_arrangement_order    default
+    layout stack \
+    window_gap 0 \
+    top_padding 0 \
+    bottom_padding 0 \
+    left_padding 0 \
+    right_padding 0 \
+    display_arrangement_order    default \
+    split_type                   vertical         \
+    split_ratio 0.30 \
+    auto_balance                 on            \
+    window_animation_duration    0.0
+
     # external_bar                 off:40:0       \
     # menubar_opacity              1.0            \
     # mouse_follows_focus          off            \
@@ -29,18 +39,10 @@ yabai -m config                                 \
     # normal_window_opacity        0.90           \
     # window_opacity               off            \
     # insert_feedback_color        0xffd75f5f     \
-    # split_ratio                  0.50           \
-    # split_type                   auto           \
-    # auto_balance                 off            \
-    # top_padding                  12             \
-    # bottom_padding               12             \
-    # left_padding                 12             \
-    # right_padding                12             \
     # window_gap                   06             \
-    # layout                       bsp            \
     # mouse_modifier               fn             \
     # mouse_action1                move           \
     # mouse_action2                resize         \
-    # mouse_drop_action            swap
+    # mouse_drop_action            swap           \
 
 echo "yabai configuration loaded.."
